Remove whitespace, fix padding, and center landing page text

--- a/src/Components/CharacterCard/CharacterCard.css
+++ b/src/Components/CharacterCard/CharacterCard.css
@@ -28,7 +28,7 @@ img {
 }
 
 .character-info-container {
-    height: 100%;
+    /* height: 100%; */
     padding: 0 20px;
 }
 
