--- a/src/Container/App/App.css
+++ b/src/Container/App/App.css
@@ -1,4 +1,5 @@
 .App {
+  background-color: pink;
   text-align: center;
   margin-left: 3.2em;
   margin: 0;
